feat: implemented follow and unfollow user

--- a/libs/users-client/profile/ui/bio-section/src/lib/bio-section/bio-section.component.html
+++ b/libs/users-client/profile/ui/bio-section/src/lib/bio-section/bio-section.component.html
@@ -27,7 +27,8 @@
       <span class="text-lg">{{currentUser?.username}}</span>
 
       <div *ngIf="!isOwnProfile" class="flex space-x-2">
-        <button mat-raised-button>Following</button>
+        <button mat-raised-button *ngIf="!isFollowing" color="primary" (click)="followUser()">Follow</button>
+        <button mat-raised-button *ngIf="isFollowing" (click)="unfollowUser()">Following</button>
       </div>
       
       <div *ngIf="isOwnProfile" class="flex space-x-2">
