--- a/libs/users-client/profile/ui/bio-section/src/lib/bio-section/bio-section.component.html
+++ b/libs/users-client/profile/ui/bio-section/src/lib/bio-section/bio-section.component.html
@@ -34,6 +34,17 @@
       <div *ngIf="isOwnProfile" class="flex space-x-2">
         <button mat-raised-button (click)="openEditDialog()">Edit profile</button>
         <button mat-raised-button (click)="logoutUser()">Logout</button>
+        <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+          <mat-icon>more_vert</mat-icon>
+        </button>
+        <mat-menu #menu="matMenu">
+          <div mat-menu-item>
+            <mat-icon>lock</mat-icon>
+            <span>Private account
+              <mat-slide-toggle (click)="changeAccountPrivacey()" [checked]="isPrivate" color="primary"></mat-slide-toggle>
+            </span>
+          </div>
+        </mat-menu>
 
       </div>
 
